# uav-system

./: .gitignore  LICENSE  README.md  组件使用情况说明.md  项目安装部署说明.md
backend-core/: API.md  PERMISSION_MATRIX.md  pom.xml
backend-core/sql/: database.sql
backend-core/src/main/resources/: application.yaml
projects/backend-core/: API.md  PERMISSION_MATRIX.md
projects/backend-core/sql/: database.sql
projects/uav-frontend/: README.md  pnpm-lock.yaml
projects/uav-frontend/scripts/: check-i18n.mjs
projects/uav-frontend/src/: main.ts
projects/uav-frontend/src/components/: AppSnackbar.vue  (+3 more)
projects/yolo-service/: .env  API.md  README.md
projects/yolo-service/logs/: app.log.2026-04-03  app.log.2026-04-10  app.log.2026-04-13  app.log.2026-04-14  app.log.2026-04-15  app.log.2026-04-16  app.log.2026-04-17  app.log.2026-04-19  app.log.2026-04-20
projects/yolo-service/scripts/: check.py  dev.py  prod.py  start.py  stop.py
uav-frontend/: .env  README.md  index.html  package.json  vite.config.ts
uav-frontend/scripts/: check-i18n.mjs
uav-frontend/src/: style.css
uav-frontend/src/api/: index.ts
uav-frontend/src/components/: InferenceNodeSelectorCard.vue
uav-frontend/src/composables/: useAuth.ts  useNotifier.ts
uav-frontend/src/layouts/: MainLayout.vue
uav-frontend/src/locales/: README.md
uav-frontend/src/plugins/: vuetify.ts
uav-frontend/src/router/: index.ts
uav-frontend/src/views/: DashboardView.vue  InferenceView.vue  NodeManagementView.vue  NotFoundView.vue  RbacAdminView.vue  RecordsView.vue  UserProfileView.vue
yolo-service/: .env  API.md  README.md  pyproject.toml  pytest.ini
yolo-service/libs/ultralytics/ultralytics/models/utils/: loss.py
yolo-service/libs/ultralytics/ultralytics/nn/NewAddModules/: CAFM.py
yolo-service/libs/ultralytics/ultralytics/nn/modules/: conv.py
yolo-service/libs/ultralytics/ultralytics/utils/: files.py
yolo-service/logs/: app.log.2026-03-27  app.log.2026-03-28  app.log.2026-03-30
yolo-service/scripts/: restart.py  start.py  status.py  tree.py
yolo-service/src/yolo_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yolo-service/src/yoloservice/: __init__.py  main.py
yolo-service/src/yoloservice/app/: create_app.py
yolo-service/src/yoloservice/app/component/: lifespan.py  route.py
yolo-service/src/yoloservice/common/: minio_client.py
yolo-service/src/yoloservice/common/utils/: file_utils.py
yolo-service/src/yoloservice/config/: settings.py
yolo-service/src/yoloservice/core/: detector.py
yolo-service/src/yoloservice/service/: inference_service.py  weight_service.py
yolo-service/src/yoloservice/web/router/: __init__.py  image_router.py  param_router.py  video_router.py  weight_router.py
(+295 files in other folders)
