[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.10.1",
    "pyyaml>=6.0.3",
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "ultralytics",
    "uvicorn>=0.42.0",
    "pathspec>=1.0.4",
    "setuptools>=81.0.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
ys = "yoloservice.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["yoloservice*"]

[tool.uv.workspace]
members = [
    "libs/ultralytics",
]

[tool.uv.sources]
ultralytics = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
