[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.10.1",
    "pyyaml>=6.0.3",
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "ultralytics",
    "uvicorn>=0.42.0",
    "pathspec>=1.0.4",
    "setuptools>=81.0.0",
    "python-multipart>=0.0.22",
    "minio>=7.2.20",
    "moviepy>=2.2.1",

    # ONNX 基础依赖
    "onnx>=1.16.0",

    # ONNX Runtime：按 Python 版本与常见平台自动分流，避免无轮子导致安装失败
    "onnxruntime>=1.18.0,<1.24.0; python_version < '3.11' and platform_machine == 'AMD64' and sys_platform == 'win32'",
    "onnxruntime>=1.18.0,<1.24.0; python_version < '3.11' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "onnxruntime>=1.24.0; python_version >= '3.11' and platform_machine == 'AMD64' and sys_platform == 'win32'",
    "onnxruntime>=1.24.0; python_version >= '3.11' and platform_machine == 'x86_64' and sys_platform == 'linux'",
]

[project.optional-dependencies]
# 常见环境建议：`uv sync --extra local-gpu`
local-gpu = [
    # Windows/Linux 上可选 GPU ONNX Runtime
    "onnxruntime-gpu>=1.18.0; platform_machine == 'AMD64' and sys_platform == 'win32'",
    "onnxruntime-gpu>=1.18.0; platform_machine == 'x86_64' and sys_platform == 'linux'",
]

[project.scripts]
ys = "yoloservice.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["yoloservice*"]

[tool.uv.workspace]
members = [
    "libs/ultralytics",
]

[tool.uv.sources]
ultralytics = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
